--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-tailwindcss": "^0.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
